# FuFan-VibeCodingCourse

./: .gitignore  CLAUDE.md  README.md  README_CN.md
00_Introduction/: README.md  README_CN.md
Stage2_Cursor_Deep_Dive/: README.md  README_CN.md
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/: .env.example  contract_review.db  pyproject.toml
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/: config.py  database.py  main.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/api/: contracts.py  events.py  fields.py  items.py  reports.py  router.py  sessions.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/core/: errors.py  main_loop.py  sse.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/models/: audit_log.py  contract.py  extracted_field.py  report.py  review_item.py  session.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/schemas/: contract.py  field.py  item.py  report.py  session.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/services/: hitl_service.py  ocr_service.py  report_service.py  review_service.py  upload_service.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/app/workflow/: checkpointer.py  graph.py  nodes.py  state.py
Stage4_Enterprise_Practice/Lesson07_Document_Review_Agent/AgentTeamProject/backend/tests/: test_mvp.py
(+459 files in other folders)
